--- a/assets/prepros.config
+++ b/assets/prepros.config
@@ -68,7 +68,8 @@
           "*.kit",
           "*.turf",
           "*.ts",
-          "/css/main.css"
+          "/css/main.css",
+          "/js/script.js"
         ],
         "exceptions": []
       }
@@ -889,6 +890,25 @@
           "tasks": {
             "autoprefixer": {
               "enable": false
+            }
+          }
+        }
+      },
+      {
+        "file": "js/script.js",
+        "config": {
+          "autoCompile": true,
+          "sourceMap": true,
+          "customOutput": "src\\script-dist.js",
+          "tasks": {
+            "concat-js": {
+              "enable": true
+            },
+            "babel": {
+              "enable": true
+            },
+            "bundle-js": {
+              "enable": true
             }
           }
         }
