--- a/assets/prepros.config
+++ b/assets/prepros.config
@@ -916,12 +916,10 @@
       {
         "file": "sass/main.scss",
         "config": {
+          "sourceMap": true,
           "tasks": {
             "autoprefixer": {
               "enable": false
-            },
-            "minify-css": {
-              "enable": true
             }
           }
         }
