--- a/prepros.config
+++ b/prepros.config
@@ -888,7 +888,13 @@
       {
         "file": "assets/css/main.css",
         "config": {
-          "customOutput": "assets\\src\\main-dist.css"
+          "autoCompile": true,
+          "customOutput": "assets\\src\\main-dist.css",
+          "tasks": {
+            "autoprefixer": {
+              "enable": false
+            }
+          }
         }
       },
       {
@@ -915,6 +921,17 @@
         "config": {
           "tasks": {
             "minify-js": {
+              "enable": false
+            }
+          }
+        }
+      },
+      {
+        "file": "assets/sass/main.scss",
+        "config": {
+          "sourceMap": true,
+          "tasks": {
+            "autoprefixer": {
               "enable": false
             }
           }
