--- a/prepros.config
+++ b/prepros.config
@@ -73,7 +73,8 @@
           "*.turf",
           "*.ts",
           "/assets/js/utils.js",
-          "/assets/js/script.js"
+          "/assets/js/script.js",
+          "/assets/js/update.js"
         ],
         "exceptions": []
       }
@@ -914,6 +915,13 @@
               "enable": true
             }
           }
+        }
+      },
+      {
+        "file": "assets/js/update.js",
+        "config": {
+          "autoCompile": true,
+          "customOutput": "assets\\src\\update-dist.js"
         }
       },
       {
