--- a/prepros.config
+++ b/prepros.config
@@ -890,6 +890,7 @@
         "file": "assets/css/main.css",
         "config": {
           "autoCompile": true,
+          "sourceMap": true,
           "customOutput": "assets\\src\\main-dist.css",
           "tasks": {
             "autoprefixer": {
@@ -921,6 +922,7 @@
         "file": "assets/js/update.js",
         "config": {
           "autoCompile": true,
+          "sourceMap": true,
           "customOutput": "assets\\src\\update-dist.js"
         }
       },
