--- a/.htaccess
+++ b/.htaccess
@@ -58,6 +58,12 @@ Header set Strict-Transport-Security "max-age=31536000; includeSubDomains"
      </FilesMatch>
  </IfModule>
 
+<IfModule mod_deflate.c>
+<FilesMatch "\.(ico|jpg|jpeg|png|gif|js|css|html|php|txt|xml)$">
+SetOutputFilter DEFLATE
+</FilesMatch>
+</IfModule>
+
 
 <IfModule mod_deflate.c>
 
